# Extension-Kit

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  bofhound-parser.axs  docker-compose.yml  extension-kit.axs
AD-BOF/: AD_beacon.json  ad.axs
AD-BOF/ADCS-BOF/: ADCS.axs
AD-BOF/Kerbeus-BOF/: kerbeus.axs
AD-BOF/LDAP-BOF/: LDAP.axs
AD-BOF/RelayInformer/: RelayInformer.axs
AD-BOF/SQL-BOF/: SQL.axs
AD-BOF/SQL-BOF/src/SQL/adsi/: entry.c
AD-BOF/SQL-BOF/src/SQL/agentcmd/: entry.c
AD-BOF/SQL-BOF/src/SQL/agentstatus/: entry.c
AD-BOF/SQL-BOF/src/SQL/checkrpc/: entry.c
AD-BOF/SQL-BOF/src/SQL/clr/: entry.c
AD-BOF/SQL-BOF/src/SQL/columns/: entry.c
AD-BOF/SQL-BOF/src/SQL/databases/: entry.c
AD-BOF/SQL-BOF/src/SQL/impersonate/: entry.c
AD-BOF/SQL-BOF/src/SQL/info/: entry.c
AD-BOF/SQL-BOF/src/SQL/links/: entry.c
AD-BOF/SQL-BOF/src/SQL/olecmd/: entry.c
AD-BOF/SQL-BOF/src/SQL/query/: entry.c
AD-BOF/SQL-BOF/src/SQL/rows/: entry.c
AD-BOF/SQL-BOF/src/SQL/search/: entry.c
AD-BOF/SQL-BOF/src/SQL/smb/: entry.c
AD-BOF/SQL-BOF/src/SQL/tables/: entry.c
AD-BOF/SQL-BOF/src/SQL/togglemodule/: entry.c
AD-BOF/SQL-BOF/src/SQL/users/: entry.c
AD-BOF/SQL-BOF/src/SQL/whoami/: entry.c
AD-BOF/SQL-BOF/src/SQL/xpcmd/: entry.c
AD-BOF/SQL-BOF/src/common/: sql.c
Creds-BOF/: Makefile  creds.axs
Creds-BOF/UnderlayCopy-BOF/_include/: adaptix.h
Creds-BOF/cookie-monster/: cookie-monster-bof.c
Creds-BOF/nanodump/include/: nanodump_ppl_dump_dll.x64.h  nanodump_ppl_dump_dll.x86.h  nanodump_ppl_medic_dll.x64.h  nanodump_ssp_dll.x64.h  nanodump_ssp_dll.x86.h
DiscordToken-BOF/: Makefile  README.md  beacon.h  discord_tokens.axs  discord_tokens.c
EdrEnum-BOF/: README.md
Elevation-BOF/: elevate.axs
Execution-BOF/: Makefile  README.md  execution.axs  execution_beacon.json
Execution-BOF/No-Consolation/: no_consolation.axs
Execution-BOF/execute-assembly/: inlineExecute-Assembly.c
Execution-BOF/inline_ea/: inline_ea.cpp
FS-BOF/: CMakeLists.txt  Makefile  README.md  fs.axs
FS-BOF/_include/: fserror.h
FS-BOF/cd/: cd.c
FS-BOF/copy/: copy.c
FS-BOF/del/: del.c
FS-BOF/dir/: dir.c
FS-BOF/mkdir/: mkdir.c
FS-BOF/move/: move.c
FS-BOF/rmdir/: rmdir.c
FS-BOF/type/: type.c
Injection-BOF/: Makefile  README.md  inject.axs  injection_beacon.json
Injection-BOF/inject_apc/: inject_apc.c  libc.h
Injection-BOF/inject_migrate/: inject_migrate.c  libc.h
Kerbeus-BOF/_include/: functions.c
LateralMovement-BOF/: Makefile  README.md  lateral.axs
LateralMovement-BOF/scshell/: README.md  scshell.c
LateralMovement-BOF/winrm-client/: winrm.cpp
Postex-BOF/: CMakeLists.txt  Makefile  README.MD  README.md  postex-beacon.json  postex.axs  postex_beacon.json
Postex-BOF/PersistenceBof/: entry.c
Postex-BOF/_include/: beacon.h  bofdefs.h
Postex-BOF/addfirewallrule/: addfirewallrule.c
Postex-BOF/screenshot/: screenshot.cpp
Postex-BOF/wifi/: Makefile
Process-BOF/: CMakeLists.txt  Makefile  README.md  process.axs  process_beacon.json
Process-BOF/procfreeze/: procfreeze.c
Process-BOF/psc/_include/: bofdefs.h
SAL-BOF/: CMakeLists.txt  Makefile  README.md  sal.axs
SAL-BOF/privcheck/: privcheck_all.c
SAL-BOF/reg/delete/: delete.c
SAL-BOF/reg/find/: find.c
SAL-BOF/reg/query/: query.c
SAL-BOF/reg/write/: write.c
SAR-BOF/: Makefile  sar.axs
SAR-BOF/_include/: adaptix.h  bofdefs.h
SQL-BOF/: Makefile  README.md  sql_bof.json
SQL-BOF/1434udp/: sql-1434udp.c
SQL-BOF/adsi/: sql-adsi.c
SQL-BOF/agentcmd/: sql-agentcmd.c
SQL-BOF/agentstatus/: sql-agentstatus.c
SQL-BOF/checkrpc/: sql-checkrpc.c
SQL-BOF/clr/: sql-clr.c
SQL-BOF/columns/: sql-columns.c
SQL-BOF/databases/: sql-databases.c
SQL-BOF/impersonate/: sql-impersonate.c
SQL-BOF/info/: sql-info.c
SQL-BOF/links/: sql-links.c
SQL-BOF/olecmd/: sql-olecmd.c
SQL-BOF/query/: sql-query.c
SQL-BOF/rows/: sql-rows.c
SQL-BOF/search/: sql-search.c
SQL-BOF/smb/: sql-smb.c
SQL-BOF/tables/: sql-tables.c
SQL-BOF/togglemodule/: sql-togglemodule.c
SQL-BOF/users/: sql-users.c
SQL-BOF/whoami/: sql-whoami.c
SQL-BOF/xpcmd/: sql-xpcmd.c
_include/: bofdefs.h
kernel/: Makefile  extension-kernel.axs  extractor.py
kernel/ETW/: Makefile  etw_ti.axs
kernel/ETW/src/: etw_disable_bof.c  etw_enum_bof.c  etw_ti_bof.c
kernel/callbacks/: Makefile  callbacks.axs
kernel/callbacks/src/: list_callbacks_bof.c  remove_callback_bof.c
kernel/ppl/: Makefile  ppl.axs
kernel/ppl/src/: ppenum_bof.c  pppatch_bof.c
